<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/gradient"
  tools:context=".activity.LoginActivity">

  <Button
    android:id="@+id/btn_login"
    style="@style/Widget.AppCompat.Button.Small"
    android:layout_width="223dp"
    android:layout_height="36dp"
    android:background="@drawable/custom_button"
    android:enabled="false"
    android:onClick="attemptLogin"
    android:text="@string/login"
    android:textColor="@android:color/background_light"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.664" />

  <EditText

    android:id="@+id/et_username"
    android:layout_width="220dp"
    android:layout_height="35dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="138dp"
    android:layout_marginEnd="52dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/custom_edit_text"
    android:drawableLeft="@drawable/ic_action_user"
    android:ems="10"
    android:hint="@string/hint_username"
    android:inputType="textPersonName"
    android:paddingLeft="10dp"
    android:textColor="@android:color/background_light"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.711"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.246" />

  <EditText
      android:id="@+id/et_password"
      android:layout_width="220dp"
      android:layout_height="35dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="38dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:background="@drawable/custom_edit_text"
      android:drawableLeft="@drawable/ic_action_pass"
      android:ems="10"
      android:hint="@string/hint_password"
      android:inputType="textPassword"
      android:paddingLeft="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.53" />

  <TextView
    android:onClick="handleRegister"
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:text="Register now"
    android:textColor="@android:color/background_light"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.939" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="155dp"
    android:layout_height="158dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:src="@drawable/spa"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.14" />

</android.support.constraint.ConstraintLayout>